finalizando logica y estilos

--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Logica de Programacion</h1>
-    <section>
-        <form id="numberForm" action="">
+    <main>
+        <h1>Logica de Programacion</h1>
+        <section>
+            <form id="numberForm" action="">
             <h2>Ingrese Un numero</h2>
             <input type="number" name="numberInput" id="numberInput">
-            <p id="numberFormError">Eror</p>
+            <p id="numberFormError"></p>
             <button type="submit">Agregar</button>
-        </form>
-        <h3>Numero Ingresados</h3>
-        <ul class="numeros" id="numerosIngresados">
-        </ul>
-        <h3>Numeros Ordenados</h3>
-        <ul class="numerosOrdenados">
-            <li></li>
-        </ul>
-    </section>
+            </form>
+            <h3>Numero Ingresados</h3>
+            <ul class="numeros" id="numerosIngresados">
+            </ul>
+            <h3>Numeros Ordenados</h3>
+            <ul id="numerosOrdenados">
+            </ul>
+        </section>
+    </main>
     <script src="./script.js"></script>
 </body>
 </html>
